// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput With empty value and placeholder 1`] = `
<div
  className="text-input"
>
  <input
    autoFocus={false}
    className="text-input__input"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="text-input__placeholder"
  >
    placeholder
  </div>
</div>
`;

exports[`TextInput With isFrom 1`] = `
<div
  className="text-input"
>
  <div
    className="text-input__view text-input__view"
  >
    100
  </div>
  <input
    autoFocus={false}
    className="text-input__input"
    onChange={[Function]}
    type="text"
    value="100"
  />
  <div
    className="text-input__placeholder"
  >
    
  </div>
</div>
`;

exports[`TextInput With not empty value and placeholder 1`] = `
<div
  className="text-input"
>
  <input
    autoFocus={false}
    className="text-input__input"
    onChange={[Function]}
    type="text"
    value="100"
  />
  <div
    className="text-input__placeholder"
  >
    
  </div>
</div>
`;

exports[`TextInput With not empty value and without placeholder 1`] = `
<div
  className="text-input"
>
  <input
    autoFocus={false}
    className="text-input__input"
    onChange={[Function]}
    type="text"
    value="100"
  />
  <div
    className="text-input__placeholder"
  >
    
  </div>
</div>
`;
